src/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> var_decls fun_decls free_statements
Rule 2     var_decl -> VAR ID ;
Rule 3     var_decl -> VAR ID ASSIGN init ;
Rule 4     var_decls -> <empty>
Rule 5     var_decls -> var_decls var_decl
Rule 6     fun_decl -> FUN function
Rule 7     fun_decls -> <empty>
Rule 8     fun_decls -> fun_decls fun_decl
Rule 9     free_statement -> compound_stmt
Rule 10    free_statement -> error }
Rule 11    free_statement -> error ;
Rule 12    free_statement -> simple_stmt ;
Rule 13    free_statements -> <empty>
Rule 14    free_statements -> free_statements free_statement
Rule 15    init -> [ exprs_non_empty_w_commas ]
Rule 16    init -> expr
Rule 17    simple_stmt -> return_stmt
Rule 18    simple_stmt -> print_stmt
Rule 19    simple_stmt -> asgn_stmt
Rule 20    compound_stmt -> for_stmt
Rule 21    compound_stmt -> while_stmt
Rule 22    compound_stmt -> if_stmt
Rule 23    statement -> block
Rule 24    statement -> free_statement
Rule 25    statements -> <empty>
Rule 26    statements -> statements statement
Rule 27    asgn_stmt -> ID ASSIGN expr
Rule 28    asgn_stmt -> ID [ aexpr ] ASSIGN expr
Rule 29    print_stmt -> PRINT expr
Rule 30    return_stmt -> RETURN expr
Rule 31    if_stmt -> IF lexpr statement
Rule 32    if_stmt -> IF lexpr statement ELSE statement
Rule 33    while_stmt -> WHILE lexpr statement
Rule 34    for_stmt -> FOR ( _1_asgn_stmt_optional ; _2_lexpr_optional ; _3_asgn_stmt_optional ) statement
Rule 35    _1_asgn_stmt_optional -> asgn_stmt
Rule 36    _1_asgn_stmt_optional -> <empty>
Rule 37    _2_lexpr_optional -> lexpr
Rule 38    _2_lexpr_optional -> <empty>
Rule 39    _3_asgn_stmt_optional -> asgn_stmt
Rule 40    _3_asgn_stmt_optional -> <empty>
Rule 41    block -> { var_decls statements }
Rule 42    expr -> sexpr
Rule 43    expr -> aexpr
Rule 44    expr -> lexpr
Rule 45    exprs_non_empty_w_commas -> expr
Rule 46    exprs_non_empty_w_commas -> exprs_non_empty_w_commas , expr
Rule 47    lexpr -> lterm
Rule 48    lexpr -> lexpr OR lterm
Rule 49    lterm -> lfact
Rule 50    lterm -> lterm AND lfact
Rule 51    lfact -> FALSE
Rule 52    lfact -> TRUE
Rule 53    lfact -> NOT lfact
Rule 54    lfact -> # ID [ aexpr ]
Rule 55    lfact -> # ID
Rule 56    lfact -> ( lexpr )
Rule 57    lfact -> # call
Rule 58    lfact -> cexpr
Rule 59    aexpr -> term
Rule 60    aexpr -> aexpr PLUS term
Rule 61    aexpr -> aexpr MINUS term
Rule 62    term -> fact
Rule 63    term -> term TIMES fact
Rule 64    term -> term DIVIDE fact
Rule 65    fact -> ID
Rule 66    fact -> ID [ aexpr ]
Rule 67    fact -> ( aexpr )
Rule 68    fact -> NUMBER
Rule 69    fact -> call
Rule 70    fact -> MINUS fact
Rule 71    cexpr -> aexpr GT aexpr
Rule 72    cexpr -> aexpr LT aexpr
Rule 73    cexpr -> aexpr GE aexpr
Rule 74    cexpr -> aexpr LE aexpr
Rule 75    cexpr -> aexpr EQ aexpr
Rule 76    cexpr -> aexpr NE aexpr
Rule 77    sexpr -> STRING
Rule 78    arguments -> exprs_non_empty_w_commas
Rule 79    function -> ID ( ) block
Rule 80    function -> ID ( parameters ) block
Rule 81    parameters -> ids_non_empty_w_commas
Rule 82    ids_non_empty_w_commas -> ID
Rule 83    ids_non_empty_w_commas -> ids_non_empty_w_commas , ID
Rule 84    call -> ID ( )
Rule 85    call -> ID ( arguments )

Terminals, with rules where they appear:

#                    : 54 55 57
(                    : 34 56 67 79 80 84 85
)                    : 34 56 67 79 80 84 85
,                    : 46 83
;                    : 2 3 11 12 34 34
AND                  : 50
ASSIGN               : 3 27 28
DIVIDE               : 64
ELSE                 : 32
EQ                   : 75
FALSE                : 51
FOR                  : 34
FUN                  : 6
GE                   : 73
GT                   : 71
ID                   : 2 3 27 28 54 55 65 66 79 80 82 83 84 85
IF                   : 31 32
LE                   : 74
LT                   : 72
MINUS                : 61 70
NE                   : 76
NOT                  : 53
NUMBER               : 68
OR                   : 48
PLUS                 : 60
PRINT                : 29
RETURN               : 30
STRING               : 77
TIMES                : 63
TRUE                 : 52
VAR                  : 2 3
WHILE                : 33
[                    : 15 28 54 66
]                    : 15 28 54 66
error                : 10 11
{                    : 41
}                    : 10 41

Nonterminals, with rules where they appear:

_1_asgn_stmt_optional : 34
_2_lexpr_optional    : 34
_3_asgn_stmt_optional : 34
aexpr                : 28 43 54 60 61 66 67 71 71 72 72 73 73 74 74 75 75 76 76
arguments            : 85
asgn_stmt            : 19 35 39
block                : 23 79 80
call                 : 57 69
cexpr                : 58
compound_stmt        : 9
expr                 : 16 27 28 29 30 45 46
exprs_non_empty_w_commas : 15 46 78
fact                 : 62 63 64 70
for_stmt             : 20
free_statement       : 14 24
free_statements      : 1 14
fun_decl             : 8
fun_decls            : 1 8
function             : 6
ids_non_empty_w_commas : 81 83
if_stmt              : 22
init                 : 3
lexpr                : 31 32 33 37 44 48 56
lfact                : 49 50 53
lterm                : 47 48 50
parameters           : 80
print_stmt           : 18
program              : 0
return_stmt          : 17
sexpr                : 42
simple_stmt          : 12
statement            : 26 31 32 32 33 34
statements           : 26 41
term                 : 59 60 61 63 64
var_decl             : 5
var_decls            : 1 5 41
while_stmt           : 21


state 0

    (0) S' -> . program
    (1) program -> . var_decls fun_decls free_statements
    (4) var_decls -> .
    (5) var_decls -> . var_decls var_decl
    VAR             reduce using rule 4 (var_decls -> .)
    FUN             reduce using rule 4 (var_decls -> .)
    error           reduce using rule 4 (var_decls -> .)
    FOR             reduce using rule 4 (var_decls -> .)
    WHILE           reduce using rule 4 (var_decls -> .)
    IF              reduce using rule 4 (var_decls -> .)
    RETURN          reduce using rule 4 (var_decls -> .)
    PRINT           reduce using rule 4 (var_decls -> .)
    ID              reduce using rule 4 (var_decls -> .)
    $end            reduce using rule 4 (var_decls -> .)

    program                        shift and go to state 1
    var_decls                      shift and go to state 2

state 1

    (0) S' -> program .


state 2

    (1) program -> var_decls . fun_decls free_statements
    (5) var_decls -> var_decls . var_decl
    (7) fun_decls -> .
    (8) fun_decls -> . fun_decls fun_decl
    (2) var_decl -> . VAR ID ;
    (3) var_decl -> . VAR ID ASSIGN init ;
    FUN             reduce using rule 7 (fun_decls -> .)
    error           reduce using rule 7 (fun_decls -> .)
    FOR             reduce using rule 7 (fun_decls -> .)
    WHILE           reduce using rule 7 (fun_decls -> .)
    IF              reduce using rule 7 (fun_decls -> .)
    RETURN          reduce using rule 7 (fun_decls -> .)
    PRINT           reduce using rule 7 (fun_decls -> .)
    ID              reduce using rule 7 (fun_decls -> .)
    $end            reduce using rule 7 (fun_decls -> .)
    VAR             shift and go to state 5

    fun_decls                      shift and go to state 3
    var_decl                       shift and go to state 4

state 3

    (1) program -> var_decls fun_decls . free_statements
    (8) fun_decls -> fun_decls . fun_decl
    (13) free_statements -> .
    (14) free_statements -> . free_statements free_statement
    (6) fun_decl -> . FUN function
    error           reduce using rule 13 (free_statements -> .)
    FOR             reduce using rule 13 (free_statements -> .)
    WHILE           reduce using rule 13 (free_statements -> .)
    IF              reduce using rule 13 (free_statements -> .)
    RETURN          reduce using rule 13 (free_statements -> .)
    PRINT           reduce using rule 13 (free_statements -> .)
    ID              reduce using rule 13 (free_statements -> .)
    $end            reduce using rule 13 (free_statements -> .)
    FUN             shift and go to state 8

    free_statements                shift and go to state 6
    fun_decl                       shift and go to state 7

state 4

    (5) var_decls -> var_decls var_decl .
    VAR             reduce using rule 5 (var_decls -> var_decls var_decl .)
    FUN             reduce using rule 5 (var_decls -> var_decls var_decl .)
    error           reduce using rule 5 (var_decls -> var_decls var_decl .)
    FOR             reduce using rule 5 (var_decls -> var_decls var_decl .)
    WHILE           reduce using rule 5 (var_decls -> var_decls var_decl .)
    IF              reduce using rule 5 (var_decls -> var_decls var_decl .)
    RETURN          reduce using rule 5 (var_decls -> var_decls var_decl .)
    PRINT           reduce using rule 5 (var_decls -> var_decls var_decl .)
    ID              reduce using rule 5 (var_decls -> var_decls var_decl .)
    $end            reduce using rule 5 (var_decls -> var_decls var_decl .)
    }               reduce using rule 5 (var_decls -> var_decls var_decl .)
    {               reduce using rule 5 (var_decls -> var_decls var_decl .)


state 5

    (2) var_decl -> VAR . ID ;
    (3) var_decl -> VAR . ID ASSIGN init ;
    ID              shift and go to state 9


state 6

    (1) program -> var_decls fun_decls free_statements .
    (14) free_statements -> free_statements . free_statement
    (9) free_statement -> . compound_stmt
    (10) free_statement -> . error }
    (11) free_statement -> . error ;
    (12) free_statement -> . simple_stmt ;
    (20) compound_stmt -> . for_stmt
    (21) compound_stmt -> . while_stmt
    (22) compound_stmt -> . if_stmt
    (17) simple_stmt -> . return_stmt
    (18) simple_stmt -> . print_stmt
    (19) simple_stmt -> . asgn_stmt
    (34) for_stmt -> . FOR ( _1_asgn_stmt_optional ; _2_lexpr_optional ; _3_asgn_stmt_optional ) statement
    (33) while_stmt -> . WHILE lexpr statement
    (31) if_stmt -> . IF lexpr statement
    (32) if_stmt -> . IF lexpr statement ELSE statement
    (30) return_stmt -> . RETURN expr
    (29) print_stmt -> . PRINT expr
    (27) asgn_stmt -> . ID ASSIGN expr
    (28) asgn_stmt -> . ID [ aexpr ] ASSIGN expr
    $end            reduce using rule 1 (program -> var_decls fun_decls free_statements .)
    error           shift and go to state 12
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    ID              shift and go to state 25

    free_statement                 shift and go to state 10
    compound_stmt                  shift and go to state 11
    simple_stmt                    shift and go to state 13
    for_stmt                       shift and go to state 14
    while_stmt                     shift and go to state 15
    if_stmt                        shift and go to state 16
    return_stmt                    shift and go to state 17
    print_stmt                     shift and go to state 18
    asgn_stmt                      shift and go to state 19

state 7

    (8) fun_decls -> fun_decls fun_decl .
    FUN             reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    error           reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    FOR             reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    WHILE           reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    IF              reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    RETURN          reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    PRINT           reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    ID              reduce using rule 8 (fun_decls -> fun_decls fun_decl .)
    $end            reduce using rule 8 (fun_decls -> fun_decls fun_decl .)


state 8

    (6) fun_decl -> FUN . function
    (79) function -> . ID ( ) block
    (80) function -> . ID ( parameters ) block
    ID              shift and go to state 27

    function                       shift and go to state 26

state 9

    (2) var_decl -> VAR ID . ;
    (3) var_decl -> VAR ID . ASSIGN init ;
    ;               shift and go to state 28
    ASSIGN          shift and go to state 29


state 10

    (14) free_statements -> free_statements free_statement .
    error           reduce using rule 14 (free_statements -> free_statements free_statement .)
    FOR             reduce using rule 14 (free_statements -> free_statements free_statement .)
    WHILE           reduce using rule 14 (free_statements -> free_statements free_statement .)
    IF              reduce using rule 14 (free_statements -> free_statements free_statement .)
    RETURN          reduce using rule 14 (free_statements -> free_statements free_statement .)
    PRINT           reduce using rule 14 (free_statements -> free_statements free_statement .)
    ID              reduce using rule 14 (free_statements -> free_statements free_statement .)
    $end            reduce using rule 14 (free_statements -> free_statements free_statement .)


state 11

    (9) free_statement -> compound_stmt .
    error           reduce using rule 9 (free_statement -> compound_stmt .)
    FOR             reduce using rule 9 (free_statement -> compound_stmt .)
    WHILE           reduce using rule 9 (free_statement -> compound_stmt .)
    IF              reduce using rule 9 (free_statement -> compound_stmt .)
    RETURN          reduce using rule 9 (free_statement -> compound_stmt .)
    PRINT           reduce using rule 9 (free_statement -> compound_stmt .)
    ID              reduce using rule 9 (free_statement -> compound_stmt .)
    $end            reduce using rule 9 (free_statement -> compound_stmt .)
    ELSE            reduce using rule 9 (free_statement -> compound_stmt .)
    }               reduce using rule 9 (free_statement -> compound_stmt .)
    {               reduce using rule 9 (free_statement -> compound_stmt .)


state 12

    (10) free_statement -> error . }
    (11) free_statement -> error . ;
    }               shift and go to state 30
    ;               shift and go to state 31


state 13

    (12) free_statement -> simple_stmt . ;
    ;               shift and go to state 32


state 14

    (20) compound_stmt -> for_stmt .
    error           reduce using rule 20 (compound_stmt -> for_stmt .)
    FOR             reduce using rule 20 (compound_stmt -> for_stmt .)
    WHILE           reduce using rule 20 (compound_stmt -> for_stmt .)
    IF              reduce using rule 20 (compound_stmt -> for_stmt .)
    RETURN          reduce using rule 20 (compound_stmt -> for_stmt .)
    PRINT           reduce using rule 20 (compound_stmt -> for_stmt .)
    ID              reduce using rule 20 (compound_stmt -> for_stmt .)
    $end            reduce using rule 20 (compound_stmt -> for_stmt .)
    ELSE            reduce using rule 20 (compound_stmt -> for_stmt .)
    }               reduce using rule 20 (compound_stmt -> for_stmt .)
    {               reduce using rule 20 (compound_stmt -> for_stmt .)


state 15

    (21) compound_stmt -> while_stmt .
    error           reduce using rule 21 (compound_stmt -> while_stmt .)
    FOR             reduce using rule 21 (compound_stmt -> while_stmt .)
    WHILE           reduce using rule 21 (compound_stmt -> while_stmt .)
    IF              reduce using rule 21 (compound_stmt -> while_stmt .)
    RETURN          reduce using rule 21 (compound_stmt -> while_stmt .)
    PRINT           reduce using rule 21 (compound_stmt -> while_stmt .)
    ID              reduce using rule 21 (compound_stmt -> while_stmt .)
    $end            reduce using rule 21 (compound_stmt -> while_stmt .)
    ELSE            reduce using rule 21 (compound_stmt -> while_stmt .)
    }               reduce using rule 21 (compound_stmt -> while_stmt .)
    {               reduce using rule 21 (compound_stmt -> while_stmt .)


state 16

    (22) compound_stmt -> if_stmt .
    error           reduce using rule 22 (compound_stmt -> if_stmt .)
    FOR             reduce using rule 22 (compound_stmt -> if_stmt .)
    WHILE           reduce using rule 22 (compound_stmt -> if_stmt .)
    IF              reduce using rule 22 (compound_stmt -> if_stmt .)
    RETURN          reduce using rule 22 (compound_stmt -> if_stmt .)
    PRINT           reduce using rule 22 (compound_stmt -> if_stmt .)
    ID              reduce using rule 22 (compound_stmt -> if_stmt .)
    $end            reduce using rule 22 (compound_stmt -> if_stmt .)
    ELSE            reduce using rule 22 (compound_stmt -> if_stmt .)
    }               reduce using rule 22 (compound_stmt -> if_stmt .)
    {               reduce using rule 22 (compound_stmt -> if_stmt .)


state 17

    (17) simple_stmt -> return_stmt .
    ;               reduce using rule 17 (simple_stmt -> return_stmt .)


state 18

    (18) simple_stmt -> print_stmt .
    ;               reduce using rule 18 (simple_stmt -> print_stmt .)


state 19

    (19) simple_stmt -> asgn_stmt .
    ;               reduce using rule 19 (simple_stmt -> asgn_stmt .)


state 20

    (34) for_stmt -> FOR . ( _1_asgn_stmt_optional ; _2_lexpr_optional ; _3_asgn_stmt_optional ) statement
    (               shift and go to state 33


state 21

    (33) while_stmt -> WHILE . lexpr statement
    (47) lexpr -> . lterm
    (48) lexpr -> . lexpr OR lterm
    (49) lterm -> . lfact
    (50) lterm -> . lterm AND lfact
    (51) lfact -> . FALSE
    (52) lfact -> . TRUE
    (53) lfact -> . NOT lfact
    (54) lfact -> . # ID [ aexpr ]
    (55) lfact -> . # ID
    (56) lfact -> . ( lexpr )
    (57) lfact -> . # call
    (58) lfact -> . cexpr
    (71) cexpr -> . aexpr GT aexpr
    (72) cexpr -> . aexpr LT aexpr
    (73) cexpr -> . aexpr GE aexpr
    (74) cexpr -> . aexpr LE aexpr
    (75) cexpr -> . aexpr EQ aexpr
    (76) cexpr -> . aexpr NE aexpr
    (59) aexpr -> . term
    (60) aexpr -> . aexpr PLUS term
    (61) aexpr -> . aexpr MINUS term
    (62) term -> . fact
    (63) term -> . term TIMES fact
    (64) term -> . term DIVIDE fact
    (65) fact -> . ID
    (66) fact -> . ID [ aexpr ]
    (67) fact -> . ( aexpr )
    (68) fact -> . NUMBER
    (69) fact -> . call
    (70) fact -> . MINUS fact
    (84) call -> . ID ( )
    (85) call -> . ID ( arguments )
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    NOT             shift and go to state 39
    #               shift and go to state 40
    (               shift and go to state 43
    ID              shift and go to state 41
    NUMBER          shift and go to state 49
    MINUS           shift and go to state 47

    lexpr                          shift and go to state 34
    lterm                          shift and go to state 35
    lfact                          shift and go to state 36
    aexpr                          shift and go to state 42
    call                           shift and go to state 44
    cexpr                          shift and go to state 45
    term                           shift and go to state 46
    fact                           shift and go to state 48

state 22

    (31) if_stmt -> IF . lexpr statement
    (32) if_stmt -> IF . lexpr statement ELSE statement
    (47) lexpr -> . lterm
    (48) lexpr -> . lexpr OR lterm
    (49) lterm -> . lfact
    (50) lterm -> . lterm AND lfact
    (51) lfact -> . FALSE
    (52) lfact -> . TRUE
    (53) lfact -> . NOT lfact
    (54) lfact -> . # ID [ aexpr ]
    (55) lfact -> . # ID
    (56) lfact -> . ( lexpr )
    (57) lfact -> . # call
    (58) lfact -> . cexpr
    (71) cexpr -> . aexpr GT aexpr
    (72) cexpr -> . aexpr LT aexpr
    (73) cexpr -> . aexpr GE aexpr
    (74) cexpr -> . aexpr LE aexpr
    (75) cexpr -> . aexpr EQ aexpr
    (76) cexpr -> . aexpr NE aexpr
    (59) aexpr -> . term
    (60) aexpr -> . aexpr PLUS term
    (61) aexpr -> . aexpr MINUS term
    (62) term -> . fact
    (63) term -> . term TIMES fact
    (64) term -> . term DIVIDE fact
    (65) fact -> . ID
    (66) fact -> . ID [ aexpr ]
    (67) fact -> . ( aexpr )
    (68) fact -> . NUMBER
    (69) fact -> . call
    (70) fact -> . MINUS fact
    (84) call -> . ID ( )
    (85) call -> . ID ( arguments )
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    NOT             shift and go to state 39
    #               shift and go to state 40
    (               shift and go to state 43
    ID              shift and go to state 41
    NUMBER          shift and go to state 49
    MINUS           shift and go to state 47

    lexpr                          shift and go to state 50
    lterm                          shift and go to state 35
    lfact                          shift and go to state 36
    aexpr                          shift and go to state 42
    call                           shift and go to state 44
    cexpr                          shift and go to state 45
    term                           shift and go to state 46
    fact                           shift and go to state 48

state 23

    (30) return_stmt -> RETURN . expr
    (42) expr -> . sexpr
    (43) expr -> . aexpr
    (44) expr -> . lexpr
    (77) sexpr -> . STRING
    (59) aexpr -> . term
    (60) aexpr -> . aexpr PLUS term
    (61) aexpr -> . aexpr MINUS term
    (47) lexpr -> . lterm
    (48) lexpr -> . lexpr OR lterm
    (62) term -> . fact
    (63) term -> . term TIMES fact
    (64) term -> . term DIVIDE fact
    (49) lterm -> . lfact
    (50) lterm -> . lterm AND lfact
    (65) fact -> . ID
    (66) fact -> . ID [ aexpr ]
    (67) fact -> . ( aexpr )
    (68) fact -> . NUMBER
    (69) fact -> . call
    (70) fact -> . MINUS fact
    (51) lfact -> . FALSE
    (52) lfact -> . TRUE
    (53) lfact -> . NOT lfact
    (54) lfact -> . # ID [ aexpr ]
    (55) lfact -> . # ID
    (56) lfact -> . ( lexpr )
    (57) lfact -> . # call
    (58) lfact -> . cexpr
    (84) call -> . ID ( )
    (85) call -> . ID ( arguments )
    (71) cexpr -> . aexpr GT aexpr
    (72) cexpr -> . aexpr LT aexpr
    (73) cexpr -> . aexpr GE aexpr
    (74) cexpr -> . aexpr LE aexpr
    (75) cexpr -> . aexpr EQ aexpr
    (76) cexpr -> . aexpr NE aexpr
    STRING          shift and go to state 55
    ID              shift and go to state 41
    (               shift and go to state 56
    NUMBER          shift and go to state 49
    MINUS           shift and go to state 47
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    NOT             shift and go to state 39
    #               shift and go to state 40

    expr                           shift and go to state 51
    sexpr                          shift and go to state 52
    aexpr                          shift and go to state 53
    lexpr                          shift and go to state 54
    term                           shift and go to state 46
    lterm                          shift and go to state 35
    fact                           shift and go to state 48
    lfact                          shift and go to state 36
    call                           shift and go to state 44
    cexpr                          shift and go to state 45

state 24

    (29) print_stmt -> PRINT . expr
    (42) expr -> . sexpr
    (43) expr -> . aexpr
    (44) expr -> . lexpr
    (77) sexpr -> . STRING
    (59) aexpr -> . term
    (60) aexpr -> . aexpr PLUS term
    (61) aexpr -> . aexpr MINUS term
    (47) lexpr -> . lterm
    (48) lexpr -> . lexpr OR lterm
    (62) term -> . fact
    (63) term -> . term TIMES fact
    (64) term -> . term DIVIDE fact
    (49) lterm -> . lfact
    (50) lterm -> . lterm AND lfact
    (65) fact -> . ID
    (66) fact -> . ID [ aexpr ]
    (67) fact -> . ( aexpr )
    (68) fact -> . NUMBER
    (69) fact -> . call
    (70) fact -> . MINUS fact
    (51) lfact -> . FALSE
    (52) lfact -> . TRUE
    (53) lfact -> . NOT lfact
    (54) lfact -> . # ID [ aexpr ]
    (55) lfact -> . # ID
    (56) lfact -> . ( lexpr )
    (57) lfact -> . # call
    (58) lfact -> . cexpr
    (84) call -> . ID ( )
    (85) call -> . ID ( arguments )
    (71) cexpr -> . aexpr GT aexpr
    (72) cexpr -> . aexpr LT aexpr
    (73) cexpr -> . aexpr GE aexpr
    (74) cexpr -> . aexpr LE aexpr
    (75) cexpr -> . aexpr EQ aexpr
    (76) cexpr -> . aexpr NE aexpr
    STRING          shift and go to state 55
    ID              shift and go to state 41
    (               shift and go to state 56
    NUMBER          shift and go to state 49
    MINUS           shift and go to state 47
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    NOT             shift and go to state 39
    #               shift and go to state 40

    expr                           shift and go to state 57
    sexpr                          shift and go to state 52
    aexpr                          shift and go to state 53
    lexpr                          shift and go to state 54
    term                           shift and go to state 46
    lterm                          shift and go to state 35
    fact                           shift and go to state 48
    lfact                          shift and go to state 36
    call                           shift and go to state 44
    cexpr                          shift and go to state 45

state 25

    (27) asgn_stmt -> ID . ASSIGN expr
    (28) asgn_stmt -> ID . [ aexpr ] ASSIGN expr
    ASSIGN          shift and go to state 58
    [               shift and go to state 59


state 26

    (6) fun_decl -> FUN function .
    FUN             reduce using rule 6 (fun_decl -> FUN function .)
    error           reduce using rule 6 (fun_decl -> FUN function .)
    FOR             reduce using rule 6 (fun_decl -> FUN function .)
    WHILE           reduce using rule 6 (fun_decl -> FUN function .)
    IF              reduce using rule 6 (fun_decl -> FUN function .)
    RETURN          reduce using rule 6 (fun_decl -> FUN function .)
    PRINT           reduce using rule 6 (fun_decl -> FUN function .)
    ID              reduce using rule 6 (fun_decl -> FUN function .)
    $end            reduce using rule 6 (fun_decl -> FUN function .)


state 27

    (79) function -> ID . ( ) block
    (80) function -> ID . ( parameters ) block
    (               shift and go to state 60


state 28

    (2) var_decl -> VAR ID ; .
    VAR             reduce using rule 2 (var_decl -> VAR ID ; .)
    FUN             reduce using rule 2 (var_decl -> VAR ID ; .)
    error           reduce using rule 2 (var_decl -> VAR ID ; .)
    FOR             reduce using rule 2 (var_decl -> VAR ID ; .)
    WHILE           reduce using rule 2 (var_decl -> VAR ID ; .)
    IF              reduce using rule 2 (var_decl -> VAR ID ; .)
    RETURN          reduce using rule 2 (var_decl -> VAR ID ; .)
    PRINT           reduce using rule 2 (var_decl -> VAR ID ; .)
    ID              reduce using rule 2 (var_decl -> VAR ID ; .)
    $end            reduce using rule 2 (var_decl -> VAR ID ; .)
    }               reduce using rule 2 (var_decl -> VAR ID ; .)
    {               reduce using rule 2 (var_decl -> VAR ID ; .)


state 29

    (3) var_decl -> VAR ID ASSIGN . init ;
    (15) init -> . [ exprs_non_empty_w_commas ]
    (16) init -> . expr
    (42) expr -> . sexpr
    (43) expr -> . aexpr
    (44) expr -> . lexpr
    (77) sexpr -> . STRING
    (59) aexpr -> . term
    (60) aexpr -> . aexpr PLUS term
    (61) aexpr -> . aexpr MINUS term
    (47) lexpr -> . lterm
    (48) lexpr -> . lexpr OR lterm
    (62) term -> . fact
    (63) term -> . term TIMES fact
    (64) term -> . term DIVIDE fact
    (49) lterm -> . lfact
    (50) lterm -> . lterm AND lfact
    (65) fact -> . ID
    (66) fact -> . ID [ aexpr ]
    (67) fact -> . ( aexpr )
    (68) fact -> . NUMBER
    (69) fact -> . call
    (70) fact -> . MINUS fact
    (51) lfact -> . FALSE
    (52) lfact -> . TRUE
    (53) lfact -> . NOT lfact
    (54) lfact -> . # ID [ aexpr ]
    (55) lfact -> . # ID
    (56) lfact -> . ( lexpr )
    (57) lfact -> . # call
    (58) lfact -> . cexpr
    (84) call -> . ID ( )
    (85) call -> . ID ( arguments )
    (71) cexpr -> . aexpr GT aexpr
    (72) cexpr -> . aexpr LT aexpr
    (73) cexpr -> . aexpr GE aexpr
    (74) cexpr -> . aexpr LE aexpr
    (75) cexpr -> . aexpr EQ aexpr
    (76) cexpr -> . aexpr NE aexpr
    [               shift and go to state 62
    STRING          shift and go to state 55
    ID              shift and go to state 41
    (               shift and go to state 56
    NUMBER          shift and go to state 49
    MINUS           shift and go to state 47
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    NOT             shift and go to state 39
    #               shift and go to state 40

    init                           shift and go to state 61
    expr                           shift and go to state 63
    sexpr                          shift and go to state 52
    aexpr                          shift and go to state 53
    lexpr                          shift and go to state 54
    term                           shift and go to state 46
    lterm                          shift and go to state 35
    fact                           shift and go to state 48
    lfact                          shift and go to state 36
    call                           shift and go to state 44
    cexpr                          shift and go to state 45

state 30

    (10) free_statement -> error } .
    error           reduce using rule 10 (free_statement -> error } .)
    FOR             reduce using rule 10 (free_statement -> error } .)
    WHILE           reduce using rule 10 (free_statement -> error } .)
    IF              reduce using rule 10 (free_statement -> error } .)
    RETURN          reduce using rule 10 (free_statement -> error } .)
    PRINT           reduce using rule 10 (free_statement -> error } .)
    ID              reduce using rule 10 (free_statement -> error } .)
    $end            reduce using rule 10 (free_statement -> error } .)
    ELSE            reduce using rule 10 (free_statement -> error } .)
    }               reduce using rule 10 (free_statement -> error } .)
    {               reduce using rule 10 (free_statement -> error } .)


state 31

    (11) free_statement -> error ; .
    error           reduce using rule 11 (free_statement -> error ; .)
    FOR             reduce using rule 11 (free_statement -> error ; .)
    WHILE           reduce using rule 11 (free_statement -> error ; .)
    IF              reduce using rule 11 (free_statement -> error ; .)
    RETURN          reduce using rule 11 (free_statement -> error ; .)
    PRINT           reduce using rule 11 (free_statement -> error ; .)
    ID              reduce using rule 11 (free_statement -> error ; .)
    $end            reduce using rule 11 (free_statement -> error ; .)
    ELSE            reduce using rule 11 (free_statement -> error ; .)
    }               reduce using rule 11 (free_statement -> error ; .)
    {               reduce using rule 11 (free_statement -> error ; .)


state 32

    (12) free_statement -> simple_stmt ; .
    error           reduce using rule 12 (free_statement -> simple_stmt ; .)
    FOR             reduce using rule 12 (free_statement -> simple_stmt ; .)
    WHILE           reduce using rule 12 (free_statement -> simple_stmt ; .)
    IF              reduce using rule 12 (free_statement -> simple_stmt ; .)
    RETURN          reduce using rule 12 (free_statement -> simple_stmt ; .)
    PRINT           reduce using rule 12 (free_statement -> simple_stmt ; .)
    ID              reduce using rule 12 (free_statement -> simple_stmt ; .)
    $end            reduce using rule 12 (free_statement -> simple_stmt ; .)
    ELSE            reduce using rule 12 (free_statement -> simple_stmt ; .)
    }               reduce using rule 12 (free_statement -> simple_stmt ; .)
    {               reduce using rule 12 (free_statement -> simple_stmt ; .)


state 33

    (34) for_stmt -> FOR ( . _1_asgn_stmt_optional ; _2_lexpr_optional ; _3_asgn_stmt_optional ) statement
    (35) _1_asgn_stmt_optional -> . asgn_stmt
    (36) _1_asgn_stmt_optional -> .
    (27) asgn_stmt -> . ID ASSIGN expr
    (28) asgn_stmt -> . ID [ aexpr ] ASSIGN expr
    ;               reduce using rule 36 (_1_asgn_stmt_optional -> .)
    ID              shift and go to state 25

    _1_asgn_stmt_optional          shift and go to state 64
    asgn_stmt                      shift and go to state 65

state 34

    (33) while_stmt -> WHILE lexpr . statement
    (48) lexpr -> lexpr . OR lterm
    (23) statement -> . block
    (24) statement -> . free_statement
    (41) block -> . { var_decls statements }
    (9) free_statement -> . compound_stmt
    (10) free_statement -> . error }
    (11) free_statement -> . error ;
    (12) free_statement -> . simple_stmt ;
    (20) compound_stmt -> . for_stmt
    (21) compound_stmt -> . while_stmt
    (22) compound_stmt -> . if_stmt
    (17) simple_stmt -> . return_stmt
    (18) simple_stmt -> . print_stmt
    (19) simple_stmt -> . asgn_stmt
    (34) for_stmt -> . FOR ( _1_asgn_stmt_optional ; _2_lexpr_optional ; _3_asgn_stmt_optional ) statement
    (33) while_stmt -> . WHILE lexpr statement
    (31) if_stmt -> . IF lexpr statement
    (32) if_stmt -> . IF lexpr statement ELSE statement
    (30) return_stmt -> . RETURN expr
    (29) print_stmt -> . PRINT expr
    (27) asgn_stmt -> . ID ASSIGN expr
    (28) asgn_stmt -> . ID [ aexpr ] ASSIGN expr
    OR              shift and go to state 67
    {               shift and go to state 70
    error           shift and go to state 12
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    ID              shift and go to state 25
